--- a/documentation/controllers/MkgtruApiController.html
+++ b/documentation/controllers/MkgtruApiController.html
@@ -63,6 +63,13 @@
             </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>/mkgtru-api/* requests</p>
+
+            </p>
 
 
 
@@ -272,6 +279,8 @@
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>/changes</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
