--- a/documentation/controllers/MkgtruApiController.html
+++ b/documentation/controllers/MkgtruApiController.html
@@ -44,6 +44,9 @@
         <li class="active">
             <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
         </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
 </ul>
 
 <div class="tab-content">
@@ -163,6 +166,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="81"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:81</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -235,6 +244,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="44"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:44</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -275,6 +290,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="37"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:37</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -349,6 +370,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="63"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:63</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -421,6 +448,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:51</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -461,6 +494,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="58"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:58</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -533,6 +572,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="69"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:69</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -605,6 +650,12 @@
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="75"
+                            class="link-to-prism">apps/mkgtru-api/src/mkgtru-api.controller.ts:75</a></div>
+                </td>
+            </tr>
 
 
             <tr>
@@ -677,6 +728,101 @@
 </section>    </div>
 
 
+    <div class="tab-pane fade  tab-source-code" id="c-source">
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Body, CacheInterceptor, CacheKey, CacheTTL, Controller, Get, HttpException, HttpStatus, Patch, Query, UseGuards, UseInterceptors, Headers, Post, Delete } from &#x27;@nestjs/common&#x27;;
+import { PrismaClient } from &#x27;@prisma/client&#x27;;
+import { MkgtruApiService } from &#x27;./mkgtru-api.service&#x27;;
+import { RequireApiKeyGuard } from &#x27;./require-api-key/require-api-key.guard&#x27;;
+import { ITitledDocumentInfo } from &#x27;./types/ITitledDocumentInfo&#x27;;
+import { territories } from &#x27;./types/territories&#x27;;
+
+
+/**
+ * /mkgtru-api/* requests
+ * @date 3/13/2023 - 11:05:44 PM
+ *
+ * @export
+ * @class MkgtruApiController
+ * @typedef {MkgtruApiController}
+ */
+@Controller(&quot;mkgtru-api&quot;)
+@UseInterceptors(CacheInterceptor)
+
+
+export class MkgtruApiController {
+  constructor(private readonly mkgtruApiService: MkgtruApiService) { }
+
+
+  
+  /**
+   * /changes
+   * @date 3/13/2023 - 11:06:10 PM
+   *
+   * @async
+   * @param {territories} territory
+   * @returns {Promise&lt;ITitledDocumentInfo&gt;}
+   */
+  @Get(&quot;changes&quot;)
+  @CacheTTL(200)
+  @UseGuards(RequireApiKeyGuard)
+  async getChanges(@Query(&quot;territory&quot;) territory: territories): Promise&lt;ITitledDocumentInfo&gt; {
+    return this.mkgtruApiService.getChanges(territory);
+  }
+
+  @Get(&quot;auditories&quot;)
+  @CacheTTL(200)
+  @UseGuards(RequireApiKeyGuard)
+  async getAuditories(): Promise&lt;ITitledDocumentInfo&gt; {
+    return this.mkgtruApiService.getAuditories();
+  }
+
+  @Get(&quot;practicelist&quot;)
+  @CacheTTL(18000)
+  @UseGuards(RequireApiKeyGuard)
+  async getPracticeList(): Promise&lt;ITitledDocumentInfo[]&gt; {
+    return this.mkgtruApiService.getPracticeList();
+  }
+
+  @Get(&quot;timetables&quot;)
+  @CacheTTL(18000)
+  @UseGuards(RequireApiKeyGuard)
+  async getTimetables(@Query(&quot;territory&quot;) territory: territories): Promise&lt;ITitledDocumentInfo[]&gt; {
+    return this.mkgtruApiService.getTimetables(territory)
+  }
+
+  @Get(&quot;status&quot;)
+  async getPing(@Query(&quot;territory&quot;) territory: territories): Promise&lt;ITitledDocumentInfo[]&gt; {
+    throw new HttpException(&#x27;OK&#x27;, HttpStatus.OK);
+  }
+
+  @Patch(&quot;token&quot;)
+  @UseGuards(RequireApiKeyGuard)
+  async revokeToken(@Headers(&quot;Authorization&quot;) bearerToken:string){
+    return this.mkgtruApiService.revokeToken(bearerToken.replace(&quot;Bearer &quot;,&quot;&quot;));
+  }
+
+  @Post(&quot;profile&quot;)
+  @UseGuards(RequireApiKeyGuard)
+  async updateProfile(@Body(&quot;name&quot;) name:string, @Body(&quot;email&quot;) email:string, @Body(&quot;surname&quot;) surname?:string){
+    
+  }
+
+  @Delete(&quot;profile&quot;)
+  @UseGuards(RequireApiKeyGuard)
+  async deleteProfile(@Headers(&quot;Authorization&quot;) bearerToken:string){
+    const token &#x3D; bearerToken.replace(&quot;Bearer &quot;,&quot;&quot;)
+    const prisma &#x3D; new PrismaClient();
+    await prisma.users.delete({
+      where:{
+        token:token
+      }
+    })
+    prisma.$disconnect();
+    throw new HttpException(&quot;DELETED&quot;, HttpStatus.OK)
+  }
+}
+</code></pre>
+    </div>
 </div>
 
 
