--- a/documentation/controllers/MkgtOfficialBotController.html
+++ b/documentation/controllers/MkgtOfficialBotController.html
@@ -28,21 +28,16 @@
                    <compodoc-menu mode="normal"></compodoc-menu>
                </div>
                <!-- START CONTENT -->
-               <div class="content guard">
+               <div class="content controller">
                    <div class="content-data">
 
 
 
 
 
-
-
-
-
-
 <ol class="breadcrumb">
-    <li>Guards</li>
-    <li >RequireApiKeyGuard</li>
+  <li>Controllers</li>
+  <li >MkgtOfficialBotController</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -55,20 +50,21 @@
 </ul>
 
 <div class="tab-content">
-        <div class="tab-pane fade active in" id="c-info">
-            <p class="comment">
+    <div class="tab-pane fade active in" id="c-info">
+        <p class="comment">
             <h3>File</h3>
-            </p>
-            <p class="comment">
-                <code>apps/mkgtru-api/src/require-api-key/require-api-key.guard.ts</code>
-            </p>
+        </p>
+        <p class="comment">
+            <code>apps/mkgt-official-bot/src/mkgt-official-bot.controller.ts</code>
+        </p>
 
 
 
 
 
 
-                <section>
+
+            <section>
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
@@ -82,8 +78,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                    <span class="modifier">Async</span>
-                                <a href="#canActivate" >canActivate</a>
+                                <a href="#getBotDialog" >getBotDialog</a>
                             </li>
                         </ul>
                     </td>
@@ -97,8 +92,7 @@
     </table>
 </section>
 
-
-                <section>
+            <section>
     
     <h3 id="methods">
         Methods
@@ -107,26 +101,31 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="canActivate"></a>
+                    <a name="getBotDialog"></a>
                     <span class="name">
-                        <span class="modifier">Async</span>
-                        <span ><b>canActivate</b></span>
-                        <a href="#canActivate"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>getBotDialog</b></span>
+                        <a href="#getBotDialog"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
             <tr>
                 <td class="col-md-4">
-                    <span class="modifier-icon icon ion-ios-reset"></span>
-                    <code>canActivate(context: ExecutionContext)</code>
+<code>getBotDialog(res)</code>
                 </td>
             </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <b>Decorators : </b>
+                    <br />
+                    <code>@Get(&#x27;/status&#x27;)<br /></code>
+                </td>
+            </tr>
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="9"
-                            class="link-to-prism">apps/mkgtru-api/src/require-api-key/require-api-key.guard.ts:9</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="14"
+                            class="link-to-prism">apps/mkgt-official-bot/src/mkgt-official-bot.controller.ts:14</a></div>
                 </td>
             </tr>
 
@@ -141,16 +140,12 @@
                             <thead>
                                 <tr>
                                     <td>Name</td>
-                                    <td>Type</td>
                                     <td>Optional</td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>context</td>
-                                    <td>
-                                            <code>ExecutionContext</code>
-                                    </td>
+                                    <td>res</td>
 
                                     <td>
                                         No
@@ -164,7 +159,7 @@
                     <div>
                     </div>
                     <div class="io-description">
-                        <b>Returns : </b>    <code>Promise&lt;boolean&gt;</code>
+                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
                     </div>
                     <div class="io-description">
@@ -174,43 +169,35 @@
             </tr>
         </tbody>
     </table>
-</section>
-        </div>
+</section>    </div>
 
 
-        <div class="tab-pane fade  tab-source-code" id="c-source">
-            <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { CanActivate, ExecutionContext, Injectable } from &#x27;@nestjs/common&#x27;;
-import { Observable } from &#x27;rxjs&#x27;;
-import { PrismaClient } from &#x27;@prisma/client&#x27;;
-const prisma &#x3D; new PrismaClient();
+    <div class="tab-pane fade  tab-source-code" id="c-source">
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Controller, Get, HttpStatus, Res } from &#x27;@nestjs/common&#x27;;
+import { MkgtOfficialBotService } from &#x27;./mkgt-official-bot.service&#x27;;
 
-
-@Injectable()
-export class RequireApiKeyGuard implements CanActivate {
-  async canActivate(
-    context: ExecutionContext,
-  ): Promise&lt;boolean&gt; {
-    const keyName &#x3D; &quot;authorization&quot; //api key property name
-    const headers &#x3D; context.switchToHttp().getRequest().headers;
-    const authHeader: string | undefined &#x3D; headers[keyName];
-    const token &#x3D; authHeader?.replace(&quot;Bearer &quot;, &quot;&quot;);
-
-
-    const user &#x3D; await prisma.users.findUnique({
-      where: {
-        token: &#x60;${token}&#x60;
-      }
-    })
-
-    if (!!user) {
-      return true
-    } else {
-      return false
+@Controller()
+export class MkgtOfficialBotController {
+  constructor(private readonly mkgtOfficialBotService: MkgtOfficialBotService) {
+    if (!MkgtOfficialBotService.info.started) {
+      this.mkgtOfficialBotService.startBot();
+      console.log(&quot;BOT_STARTED&quot;)
     }
   }
-}</code></pre>
-        </div>
+
+  @Get(&quot;/status&quot;)
+  getBotDialog(@Res() res) {
+    res.status(HttpStatus.OK).send(&quot;Bot service started&quot;);
+  }
+}
+</code></pre>
+    </div>
 </div>
+
+
+
+
+
 
 
 
@@ -247,8 +234,8 @@ export class RequireApiKeyGuard implements CanActivate {
 
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
-            var COMPODOC_CURRENT_PAGE_CONTEXT = 'guard';
-            var COMPODOC_CURRENT_PAGE_URL = 'RequireApiKeyGuard.html';
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'controller';
+            var COMPODOC_CURRENT_PAGE_URL = 'MkgtOfficialBotController.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
