--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -70,7 +70,31 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./miscellaneous/functions.html#bootstrap">apps/mkgtru-api/src/main.ts</a>
+                <a href="./controllers/DocumentationStaticController.html">apps/documentation-static/src/documentation-static.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>DocumentationStaticController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/DocumentationStaticService.html">apps/documentation-static/src/documentation-static.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>DocumentationStaticService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#bootstrap">apps/documentation-static/src/main.ts</a>
             </td>
             <td>function</td>
             <td>bootstrap</td>
@@ -82,49 +106,181 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#bootstrap">apps/mkgt-official-bot/src/main.ts</a>
+            </td>
+            <td>function</td>
+            <td>bootstrap</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./controllers/MkgtOfficialBotController.html">apps/mkgt-official-bot/src/mkgt-official-bot.controller.ts</a>
+            </td>
+            <td>controller</td>
+            <td>MkgtOfficialBotController</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./injectables/MkgtOfficialBotService.html">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>injectable</td>
+            <td>MkgtOfficialBotService</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/8)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/IBotCommand.html">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>interface</td>
+            <td>IBotCommand</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/3)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#_CHECK_CHANGES_INTERVAL">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>_CHECK_CHANGES_INTERVAL</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#_LINE_BREAK">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>_LINE_BREAK</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#_ROW_BREAK">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>_ROW_BREAK</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#commands">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>commands</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#prisma">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>prisma</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#schedule">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>schedule</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./miscellaneous/functions.html#bootstrap">apps/mkgtru-api/src/main.ts</a>
+            </td>
+            <td>function</td>
+            <td>bootstrap</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./controllers/MkgtruApiController.html">apps/mkgtru-api/src/mkgtru-api.controller.ts</a>
             </td>
             <td>controller</td>
             <td>MkgtruApiController</td>
-            <td align="right" data-sort="22">
-                <span class="coverage-percent">22 %</span>
-                <span class="coverage-count">(2/9)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(9/9)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/MkgtruApiService.html">apps/mkgtru-api/src/mkgtru-api.service.ts</a>
             </td>
             <td>injectable</td>
             <td>MkgtruApiService</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/6)</span>
+            <td align="right" data-sort="85">
+                <span class="coverage-percent">85 %</span>
+                <span class="coverage-count">(6/7)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/functions.html#getElementsFromPage">apps/mkgtru-api/src/mkgtru-api.service.ts</a>
             </td>
             <td>function</td>
             <td>getElementsFromPage</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/functions.html#getTitledFileInfoByATag">apps/mkgtru-api/src/mkgtru-api.service.ts</a>
             </td>
             <td>function</td>
             <td>getTitledFileInfoByATag</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
@@ -154,6 +310,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#prisma">apps/mkgtru-api/src/require-api-key/require-api-key.guard.ts</a>
+            </td>
+            <td>variable</td>
+            <td>prisma</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./interfaces/ITitledDocumentInfo.html">apps/mkgtru-api/src/types/ITitledDocumentInfo.ts</a>
             </td>
             <td>interface</td>
@@ -161,6 +329,18 @@
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/5)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/ITokenResponse.html">apps/mkgtru-api/src/types/tokenObject.ts</a>
+            </td>
+            <td>interface</td>
+            <td>ITokenResponse</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/2)</span>
             </td>
         </tr>
     </tbody>
