--- a/documentation/properties.html
+++ b/documentation/properties.html
@@ -53,9 +53,9 @@
         <li>
             <b>Version</b> : 0.0.1</li>
         <li>
-            <b>Description</b> : </li>
+            <b>Description</b> : Path: https://mkgtru-api.onrender.com</li>
         <li>
-            <b>License</b> : UNLICENSED</li>
+            <b>License</b> : PRIVATE</li>
         <li>
             <b>Author</b> : https://github.com/AlexC-ux</li>
     </ul>
