--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -58,6 +58,8 @@
         <li>
             <b>@nestjs/platform-express</b> : ^9.0.0</li>
         <li>
+            <b>@nestjs/serve-static</b> : ^3.0.1</li>
+        <li>
             <b>@prisma/client</b> : ^4.11.0</li>
         <li>
             <b>axios</b> : ^1.3.4</li>
@@ -70,11 +72,15 @@
         <li>
             <b>node-html-parser</b> : ^6.1.5</li>
         <li>
+            <b>node-schedule</b> : ^2.1.1</li>
+        <li>
             <b>prisma</b> : ^4.11.0</li>
         <li>
             <b>reflect-metadata</b> : ^0.1.13</li>
         <li>
             <b>rxjs</b> : ^7.2.0</li>
+        <li>
+            <b>telegraf</b> : ^4.12.2</li>
         <li>
             <b>webpack</b> : ^5.76.1</li>
     </ul>
