--- a/documentation/interfaces/ITokenResponse.html
+++ b/documentation/interfaces/ITokenResponse.html
@@ -47,7 +47,7 @@
   <li>Interfaces</li>
   <li
   >
-  ITitledDocumentInfo</li>
+  ITokenResponse</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -65,7 +65,7 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>apps/mkgtru-api/src/types/ITitledDocumentInfo.ts</code>
+            <code>apps/mkgtru-api/src/types/tokenObject.ts</code>
         </p>
 
 
@@ -84,27 +84,9 @@
                         <td class="col-md-4">
                             <ul class="index-list">
                                 <li>
-                                        <a href="#data_type" 
+                                        <a href="#token" 
 >
-                                            data_type
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#last_modified" 
->
-                                            last_modified
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#links" 
->
-                                            links
-                                        </a>
-                                </li>
-                                <li>
-                                        <a href="#title" 
->
-                                            title
+                                            token
                                         </a>
                                 </li>
                             </ul>
@@ -122,9 +104,9 @@
                         <tbody>
                                 <tr>
                                     <td class="col-md-4">
-                                        <a name="data_type"></a>
-                                        <span class="name "><b>data_type</b>
-                                            <a href="#data_type">
+                                        <a name="token"></a>
+                                        <span class="name "><b>token</b>
+                                            <a href="#token">
                                                 <span class="icon ion-ios-link"></span>
                                             </a>
                                         </span>
@@ -132,106 +114,7 @@
                                 </tr>
                                 <tr>
                                     <td class="col-md-4">
-                                        <code>data_type:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="last_modified"></a>
-                                        <span class="name "><b>last_modified</b>
-                                            <a href="#last_modified">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>last_modified:     <code>literal type</code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>    <code>literal type</code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="links"></a>
-                                        <span class="name "><b>links</b>
-                                            <a href="#links">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>links:     <code>literal type</code>
-</code>
-                                    </td>
-                                </tr>
-
-
-                                    <tr>
-                                        <td class="col-md-4">
-                                            <i>Type : </i>    <code>literal type</code>
-
-                                        </td>
-                                    </tr>
-
-
-
-
-
-                        </tbody>
-                    </table>
-                    <table class="table table-sm table-bordered">
-                        <tbody>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <a name="title"></a>
-                                        <span class="name "><b>title</b>
-                                            <a href="#title">
-                                                <span class="icon ion-ios-link"></span>
-                                            </a>
-                                        </span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="col-md-4">
-                                        <code>title:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+                                        <code>token:         <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 </code>
                                     </td>
                                 </tr>
@@ -255,22 +138,7 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface ITitledDocumentInfo {
-    &#x27;title&#x27;: string,
-    &#x27;last_modified&#x27;: {
-        &#x27;ru&#x27;: string,
-        &#x27;en-US&#x27;: string,
-        &#x27;timestamp&#x27;: number,
-    },
-    &#x27;links&#x27;: {
-        &#x27;file&#x27;: string,
-        &#x27;views&#x27;: {
-            &#x27;google_docs&#x27;: string,
-            &#x27;local_html&#x27;: string,
-        },
-    },
-    &#x27;data_type&#x27;: string,
-}</code></pre>
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface ITokenResponse { &#x27;token&#x27;: string }</code></pre>
     </div>
 </div>
 
@@ -307,7 +175,7 @@
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'interface';
-            var COMPODOC_CURRENT_PAGE_URL = 'ITitledDocumentInfo.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'ITokenResponse.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
