--- a/documentation/miscellaneous/functions.html
+++ b/documentation/miscellaneous/functions.html
@@ -61,6 +61,12 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#bootstrap" title="apps/documentation-static/src/main.ts" ><b>bootstrap</b>&nbsp;&nbsp;&nbsp;(apps/.../main.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#bootstrap" title="apps/mkgt-official-bot/src/main.ts" ><b>bootstrap</b>&nbsp;&nbsp;&nbsp;(apps/.../main.ts)</a>
+                        </li>
+                        <li>
                             <a href="#bootstrap" title="apps/mkgtru-api/src/main.ts" ><b>bootstrap</b>&nbsp;&nbsp;&nbsp;(apps/.../main.ts)</a>
                         </li>
                         <li>
@@ -76,7 +82,55 @@
     </table>
 </section>
 
-    <h3>apps/mkgtru-api/src/main.ts</h3>
+    <h3>apps/documentation-static/src/main.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="bootstrap"></a>
+                    <span class="name">
+                        <span ><b>bootstrap</b></span>
+                        <a href="#bootstrap"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>bootstrap()</code>
+                </td>
+            </tr>
+
+
+
+
+        </tbody>
+    </table>
+</section>    <h3>apps/mkgt-official-bot/src/main.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="bootstrap"></a>
+                    <span class="name">
+                        <span ><b>bootstrap</b></span>
+                        <a href="#bootstrap"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>bootstrap()</code>
+                </td>
+            </tr>
+
+
+
+
+        </tbody>
+    </table>
+</section>    <h3>apps/mkgtru-api/src/main.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
         <tbody>
@@ -124,6 +178,8 @@
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Getting single element from page</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -199,6 +255,8 @@
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Getting info about document by <a> tag element</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
