--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -61,7 +61,28 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#_CHECK_CHANGES_INTERVAL" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_CHECK_CHANGES_INTERVAL</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#_LINE_BREAK" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_LINE_BREAK</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#_ROW_BREAK" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_ROW_BREAK</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#commands" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>commands</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
                             <a href="#cuid" title="apps/mkgtru-api/src/mkgtru-api.service.ts" ><b>cuid</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgtru-api.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#prisma" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>prisma</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#prisma" title="apps/mkgtru-api/src/require-api-key/require-api-key.guard.ts" ><b>prisma</b>&nbsp;&nbsp;&nbsp;(apps/.../require-api-key.guard.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#schedule" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>schedule</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
                         </li>
                     </ul>
                 </td>
@@ -70,6 +91,153 @@
     </table>
 </section>
 
+    <h3>apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="_CHECK_CHANGES_INTERVAL"></a>
+                    <span class="name">
+                        <span ><b>_CHECK_CHANGES_INTERVAL</b></span>
+                        <a href="#_CHECK_CHANGES_INTERVAL"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>2 * 60 * 60 * 1000</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="_LINE_BREAK"></a>
+                    <span class="name">
+                        <span ><b>_LINE_BREAK</b></span>
+                        <a href="#_LINE_BREAK"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&quot;\n&quot;</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="_ROW_BREAK"></a>
+                    <span class="name">
+                        <span ><b>_ROW_BREAK</b></span>
+                        <a href="#_ROW_BREAK"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&quot;\n\n&quot;</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="commands"></a>
+                    <span class="name">
+                        <span ><b>commands</b></span>
+                        <a href="#commands"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="../interfaces/IBotCommand.html" target="_self" >IBotCommand[]</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>[
+  { &#x27;command&#x27;: &quot;start&quot;, &quot;description&quot;: &quot;запуск бота&quot; },
+  { &#x27;command&#x27;: &quot;changes&quot;, &quot;description&quot;: &quot;получение информации о заменах&quot; },
+  { &#x27;command&#x27;: &quot;status&quot;, &quot;description&quot;: &quot;получение состояния сервера&quot; },
+  { &#x27;command&#x27;: &quot;practice&quot;, &quot;description&quot;: &quot;получение расписаний практики&quot; },
+  { &#x27;command&#x27;: &quot;profile&quot;, &quot;description&quot;: &quot;настройка профиля&quot; },
+]</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="prisma"></a>
+                    <span class="name">
+                        <span ><b>prisma</b></span>
+                        <a href="#prisma"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>new PrismaClient()</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="schedule"></a>
+                    <span class="name">
+                        <span ><b>schedule</b></span>
+                        <a href="#schedule"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>require(&#x27;node-schedule&#x27;)</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
     <h3>apps/mkgtru-api/src/mkgtru-api.service.ts</h3>
     <section>
     <h3></h3>    <table class="table table-sm table-bordered">
@@ -86,6 +254,29 @@
                 <tr>
                     <td class="col-md-4">
                         <i>Default value : </i><code>require(&quot;cuid&quot;)</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+</section>
+    <h3>apps/mkgtru-api/src/require-api-key/require-api-key.guard.ts</h3>
+    <section>
+    <h3></h3>    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="prisma"></a>
+                    <span class="name">
+                        <span ><b>prisma</b></span>
+                        <a href="#prisma"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>new PrismaClient()</code>
                     </td>
                 </tr>
 
