--- a/documentation/index.html
+++ b/documentation/index.html
@@ -41,8 +41,8 @@
 }</code></pre></div></div>
 
 <h2 id="links">LINKS</h2>
-<h3 id="documentation"><a href="https://mkgt-backend-docs.onrender.com/index.html">Documentation</a></h3>
-<p><a href="https://mkgt-backend-docs.onrender.com/controllers/MkgtruApiController.html">SERVER API documentation</a></p>
+<h3 id="documentation"><a href="/index.html">Documentation</a></h3>
+<p><a href="/controllers/MkgtruApiController.html">SERVER API documentation</a></p>
 <h3 id="bot-example-link"><a href="https://t.me/mkgt_official_bot">Bot example link</a></h3>
 
 
