--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -166,6 +166,18 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
+                <a href="./miscellaneous/variables.html#_DOCUMENT_ERROR">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
+            </td>
+            <td>variable</td>
+            <td>_DOCUMENT_ERROR</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#_LINE_BREAK">apps/mkgt-official-bot/src/mkgt-official-bot.service.ts</a>
             </td>
             <td>variable</td>
