--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -64,6 +64,9 @@
                             <a href="#_CHECK_CHANGES_INTERVAL" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_CHECK_CHANGES_INTERVAL</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
                         </li>
                         <li>
+                            <a href="#_DOCUMENT_ERROR" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_DOCUMENT_ERROR</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
+                        </li>
+                        <li>
                             <a href="#_LINE_BREAK" title="apps/mkgt-official-bot/src/mkgt-official-bot.service.ts" ><b>_LINE_BREAK</b>&nbsp;&nbsp;&nbsp;(apps/.../mkgt-official-bot.service.ts)</a>
                         </li>
                         <li>
@@ -107,6 +110,32 @@
                 <tr>
                     <td class="col-md-4">
                         <i>Default value : </i><code>2 * 60 * 60 * 1000</code>
+                    </td>
+                </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="_DOCUMENT_ERROR"></a>
+                    <span class="name">
+                        <span ><b>_DOCUMENT_ERROR</b></span>
+                        <a href="#_DOCUMENT_ERROR"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>&quot;Не удалось получить документ с сервера&quot;</code>
                     </td>
                 </tr>
 
