--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -9,8 +9,8 @@
     <section class="advert">
 
     </section>
-    <section id="viewer" class="notLoaded">
-        <iframe>
+    <section id="viewer">
+        <iframe class="notLoaded">
             Loading ...
         </iframe>
     </section>
