--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -10,6 +10,7 @@
 
     </section>
     <section id="viewer">
+        <div class="docLoaderText">Loading...</div>
         <iframe class="notLoaded">
             Loading ...
         </iframe>
