--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -10,7 +10,7 @@
 
     </section>
     <section id="viewer">
-        <div class="docLoaderText">Loading...</div>
+        <div class="docLoaderText"></div>
         <iframe class="notLoaded">
             Loading ...
         </iframe>
